--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
-    "next": "14.0.4",
+    "next": "^13.5.6",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3"
